project(Client)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${FRAMEWORK_SRC_DIR}
    ${FRAMEWORK_SRC_DIR}/GUI
    ${TORRENT_SRC_DIR}
    ${TORRENT_SRC_DIR}/bencoding
    ${TORRENT_SRC_DIR}/http
    ${TORRENT_SRC_DIR}/network
    ${SDL2_INCLUDE_DIRS}
    ${SDL2_GFX_INCLUDE_DIRS}
    ${SDL2_IMAGE_INCLUDE_DIRS}
    ${SDL2_TTF_INCLUDE_DIRS}
    ${OPENSSL_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
)

file(GLOB_RECURSE client_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.h)

add_executable(${client_EXEC}
    ${client_SRC}
)

TARGET_LINK_LIBRARIES(${client_EXEC}
    ${framework_LIB}
    ${torrent_LIB}
    ${SDL2_LIBRARY}
    ${SDL2_GFX_LIBRARIES}
    ${SDL2_IMAGE_LIBRARIES}
    ${SDL2_TTF_LIBRARIES}
    ${OPENSSL_LIBRARIES}
    ${Boost_SYSTEM_LIBRARY}
)

cotire(${client_EXEC})
